# sbomr

./: Cargo.toml  Justfile  LICENSE  README.md  bom.json
src/: app.rs  lib.rs  main.rs  sbom.rs  theme.rs  ui.rs
tests/: parse_test.rs
tests/fixtures/: npm-bom.json  trivy-bom.json
