[package]
name = "sbomr"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jan Pipek <jan.pipek@gmail.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
